--- a/mu/templates/ResForm.html
+++ b/mu/templates/ResForm.html
@@ -1,4 +1,10 @@
 <html>
+  <head>
+
+    <link rel="shortcut icon" href="/staticfiles/favicon.ico" type="image/x-icon">
+
+  </head>
+
   <body>
     <h1>Resultat</h1>
     <p>Namn: {{ name }}</p>
