--- a/mu/templates/StudForm.html
+++ b/mu/templates/StudForm.html
@@ -8,6 +8,8 @@
 	  padding: 10px;
       }
     </style>
+
+    <link rel="shortcut icon" href="/staticfiles/favicon.ico" type="image/x-icon">
   </head>
 
   <body>
