--- a/mu/templates/StudForm.html
+++ b/mu/templates/StudForm.html
@@ -1,3 +1,4 @@
+{% load static %}
 <html>
   <head>
     <style>
@@ -8,8 +9,8 @@
 	  padding: 10px;
       }
     </style>
-
-    <link rel="shortcut icon" href="/staticfiles/favicon.ico" type="image/x-icon">
+    <title>Skriv ditt namn och klassen</title>
+     <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
   </head>
 
   <body>
