--- a/mu/templates/ResForm.html
+++ b/mu/templates/ResForm.html
@@ -1,7 +1,10 @@
+{% load static %}
+
 <html>
   <head>
 
-    <link rel="shortcut icon" href="/staticfiles/favicon.ico" type="image/x-icon">
+    <title>Resultat</title>
+     <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
 
   </head>
 
