Working version beta 2.0 ready for Heroku with Debug=False

--- a/mu/templates/ResForm.html
+++ b/mu/templates/ResForm.html
@@ -16,8 +16,8 @@
       Du gjorde testet i {{ minutes}} minuter och {{ seconds }} sekunder. Du hade {{ correct }} korrekta svar, och {{ errors }} fel.</p>
     <p>Du behöver repetera följande multiplikation som du hade fel:
     </p>
-    {% for f in ers %}
-    <li>{{ f }}</li>
+    {% for e in ers %}
+    <li>{{ e }}</li>
     {% endfor %}
 
   </body>
